--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,8 +1,8 @@
-body{
+body {
+	margin:0px;
+	padding:0px;
 
-  margin:0px;
-  padding:0px;
-  font color:#484848;
-  font-size: 14px;
-  font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+	color: #484848;
+	font-size: 14px;
+	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
