--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,27 +1,32 @@
-.places{
-  font-size:30px;
-  margin:45px auto;
+.places {
+	display: block;
+	margin: 45px auto;
+	text-align: center;
 }
 
-article{
-  width:390px;
-  padding:20px;
-  margin:20px;
-  border: 1px solid #FF5A5F;
-  border-radius: 4px;
-  font size:30px;
-  text-align:center;
-
-  /*alinearlos*/
-display: inline-block;
+article {
+	display: inline-block;
+	width: 390px;
+	padding: 20px;
+	margin: 20px;
+	border: 1px solid #FF5A5F;
+	border-radius: 4px;
+	text-align: center;
 }
 
-._article{
-  margin-left:25%;
-  margin-right:auto;
+h1 {
+	float: left;
+	text-align: left;
+	width: 95%;
+	display: block;
+	margin-top: 0px;
+	margin-left: 20px;
+	margin-bottom: 5px;
+	font-size: 30px;
 }
 
-h2{
-  font-size:30px;
-  text-align:center;
+article h2 {
+	font-size: 30px;
+	padding: 0px;
+	margin: auto;
 }
