--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,136 +1,126 @@
-.places{
-    font-size:30px;
-    margin:45px auto;
-    margin-bottom:-50px;
+.places {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	margin: 45px auto;
+	text-align: center;
 }
 
-article{
-    width:390px;
-    padding:20px;
-    margin:20px;
-    border: 1px solid #FF5A5F;
-    border-radius: 4px;
-    font-size:30px;
-    text-align:center;
+article {
+	display: flex;
+	width: 390px;
+	flex: none;
+	flex-wrap: wrap;
+	flex-direction: row;
+	align-content: flex-start;
 
-    /*alinearlos*/
+	padding-top: 10px;
+	padding-right: 20px;
+	padding-left: 20px;
+	padding-bottom: 20px;
+	margin: 20px;
 
-    display: inline-block;
-    flex-direction:column;
+	border: 1px solid #FF5A5F;
+	border-radius: 4px;
 }
 
-._article_1{
+.headline {
+	display: flex;
+	flex-direction: row;
+	position: relative;
 
-    margin-top:-1000px;
+	height: 80px;	
+	width: 100%;
 }
 
-._article{
-    margin-left:25%;
-    margin-right:auto;
+.price_by_night {
+	display: flex;
+	justify-content: center;
+	align-self: flex-end;
+
+	position: absolute;
+	right: 0;
+
+	line-height: 60px;
+	color: #FF5A5F;
+	font-size: 30px;
+	padding: 5px;
+	border: 4px solid #FF5A5F;
+	border-radius: 100%;
+	float: right;
+	min-width: 60px;
+	height: 60px;
 }
 
-h2{
-    font-size:30px;
-    text-align:center;
-    margin-left:25%;
+.information {
+	display: block;
+	height: 80px;
+	width: 100%;
+	border-top: 1px solid #DDDDDD;
+	border-bottom: 1px solid #DDDDDD;
+
+	padding-top: 5px;
+	padding-bottom: 12px;
+	margin-top: 10px;
+	margin-bottom: 20px;
 }
 
-/*poin8*/
-
-.price_by_night{
-    position: absolute;
-    right:0;
-    margin-top:-15%;
-    line-height: 60px;
-    color: #FF5A5F;
-    font-size: 30px;
-    padding: 5px;
-    border: 4px solid #FF5A5F;
-    border-radius: 100%;
-    float: right;
-    min-width: 60px;
-    height: 60px;
-}
-
-.new_div {
-    display: inline-block;
-    position: relative;
-    height: 80px;
-    width: 100%;
-}
-
-.information{
-    height: 80px;
-    border-top:1px solid#DDDDDD;
-    border-bottom:1px solid #DDDDDd;
-    padding-top: 2px;
-    padding-bottom: 12px;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    justify-content: space-around;
-
-
-}
-._guests{
-    display:inline-block;
-    margin-top: 15px;
-    margin-bottom:-20px;
-    margin-left: 25px;
-    background: url(../images/icon_group.png);
-    background-repeat: no-repeat;
-    width: 100px;
-    height: 100px;
-}
-
-._rooms{
-    display: inline-block;
-    margin-top: 15px;
-    margin-bottom:3px;
-    background-image: url(../images/icon_bed.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100px;
-    height: 100px;
-
-}
-
-._bathrooms{
-    display: inline-block;
-    margin-top: 15px;
-    margin-bottom:-15px;
-    background-image: url(../images/icon_bath.png);
-    background-repeat: no-repeat;
-    width: 100px;
-    height: 100px;
-    margin-left: 20px;
-}
-
-.max_guest, .number_rooms, .number_bathrooms{
+.max_guest, .number_rooms, .number_bathrooms {
 	display: inline-block;
 	width: 100px;
 	text-align: center;
 	margin: 0px auto;
 }
 
-
-p{
-    font-size:15px;
-    text-align: center;
-    margin-top: -30px;
-    margin-bottom: 10px;
+.user {
+	margin-top: 5px;
+	margin-bottom: 5px;	
 }
 
-.user{
-    margin-top:25%;
-    /*margin-left: -80px;*/
-    text-align: justify;
+.description {
+	text-align: left;
 }
 
-
-.description{
-    text-align: left;
-    margin-top: 10px;
+h1 {
+	display: block;
+	text-align: left;
+	width: 95%;
+	display: block;
+	margin-top: 0px;
+	margin-left: 20px;
+	margin-bottom: 5px;
+	font-size: 30px;
 }
 
+article h2 {
+	font-size: 30px;
+	margin: 10px auto;
+	padding: 0px;
+}
 
+.guest_icon {
+	display: inline-block;
+	background-image: url("../images/icon_group.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 50px;
+	height: 50px;
+}
 
+.bed_icon {
+	display: inline-block;
+	background-image: url("../images/icon_bed.png");
+	background-repeat: no-repeat;
+	background-position: center;
+    width: 50px;
+    height: 50px;
+}
+
+.bath_icon {
+	display: inline-block;
+	background-image: url("../images/icon_bath.png");
+	background-repeat: no-repeat;
+	background-position: center;
+    width: 50px;
+    height: 50px;
+}
