--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -1,209 +1,203 @@
-.places {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	margin: 45px auto;
-	text-align: center;
+.places{
+    font-size:30px;
+    margin:45px auto;
+    margin-bottom:-50px;
 }
 
-article {
-	display: flex;
-	width: 390px;
-	flex: none;
-	flex-wrap: wrap;
-	flex-direction: row;
-	align-content: flex-start;
+article{
+    width:390px;
+    padding:20px;
+    margin:20px;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+    font-size:30px;
+    text-align:center;
 
-	padding-top: 10px;
-	padding-right: 20px;
-	padding-left: 20px;
-	padding-bottom: 40px;
-	margin: 20px;
+    /*alinearlos*/
 
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
+    display: inline-block;
+    flex-direction:column-reverse;
 }
 
-.headline {
-	display: flex;
-	flex-direction: row;
-	position: relative;
-
-	height: 80px;	
-	width: 100%;
+._article{
+    margin-left:25%;
+    margin-right:auto;
 }
 
-.price_by_night {
-	display: flex;
-	justify-content: center;
-	align-self: flex-end;
-
-	position: absolute;
-	right: 0;
-
-	line-height: 60px;
-	color: #FF5A5F;
-	font-size: 30px;
-	padding: 5px;
-	border: 4px solid #FF5A5F;
-	border-radius: 100%;
-	float: right;
-	min-width: 60px;
-	height: 60px;
+h2{
+    font-size:30px;
+    text-align:center;
+    margin-left:25%;
 }
 
-.information {
-	display: block;
-	height: 80px;
-	width: 100%;
-	border-top: 1px solid #DDDDDD;
-	border-bottom: 1px solid #DDDDDD;
+/*poin8*/
 
-	padding-top: 5px;
-	padding-bottom: 12px;
-	margin-top: 10px;
-	margin-bottom: 20px;
+.price_by_night{
+    position: absolute;
+    right:0;
+    margin-top:-15%;
+    line-height: 60px;
+    color: #FF5A5F;
+    font-size: 30px;
+    padding: 5px;
+    border: 4px solid #FF5A5F;
+    border-radius: 100%;
+    float: right;
+    min-width: 60px;
+    height: 60px;
 }
 
-.max_guest, .number_rooms, .number_bathrooms {
+.new_div {
+    display: inline-block;
+    position: relative;
+    height: 80px;
+    width: 100%;
+}
+
+.information{
+    height: 80px;
+    border-top:1px solid#DDDDDD;
+    border-bottom:1px solid #DDDDDd;
+    padding-top: 2px;
+    padding-bottom: 12px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    justify-content: space-around;
+
+
+}
+._guests{
+    display:inline-block;
+    margin-top: 15px;
+    margin-bottom:-20px;
+    margin-left: 25px;
+    background: url(../images/icon_group.png);
+    background-repeat: no-repeat;
+    width: 100px;
+    height: 100px;
+}
+
+._rooms{
+    display: inline-block;
+    margin-top: 15px;
+    margin-bottom:3px;
+    background-image: url(../images/icon_bed.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100px;
+    height: 100px;
+
+}
+
+._bathrooms{
+    display: inline-block;
+    margin-top: 15px;
+    margin-bottom:-15px;
+    background-image: url(../images/icon_bath.png);
+    background-repeat: no-repeat;
+    width: 100px;
+    height: 100px;
+    margin-left: 20px;
+}
+
+.max_guest, .number_rooms, .number_bathrooms{
 	display: inline-block;
 	width: 100px;
 	text-align: center;
 	margin: 0px auto;
 }
 
-.user {
-	margin-top: 5px;
-	margin-bottom: 5px;	
+
+p{
+    font-size:15px;
+    text-align: center;
+    margin-top: -30px;
+    margin-bottom: 10px;
 }
 
-.description {
-	text-align: left;
+.user{
+    margin-top:25%;
+    /*margin-left: -80px;*/
+    text-align: justify;
 }
 
-h1 {
-	display: block;
-	text-align: left;
-	width: 95%;
-	display: block;
-	margin-top: 0px;
-	margin-left: 20px;
-	margin-bottom: 5px;
-	font-size: 30px;
+
+.description{
+    text-align: left;
+    margin-top: 10px;
 }
 
-article .amenities {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-	margin-top: 40px;
+/*advanced*/
+
+.amenities{
+
+    margin-top:40px;
+    padding: 0px;
 }
 
-.article_subtitle {
-	font-size: 16px;
-	text-align: left;
-	width: 100%;
-	border-bottom: 1px solid #DDDDDD;
-	padding: 0px;
-	margin: 0px;
-	padding-bottom: 10px;
-}
-
-.article_title {
-	font-size: 30px;
-	margin: 10px auto;
-	padding: 0px;
-}
-
-article ul {
-	text-align: left;
-	margin-top: 20px;
-	margin-bottom: 0px;
-	padding-bottom: 0px;
-}
-
-article li {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-content: flex-start;
-	margin-bottom: 10px;
-}
-
-.reviews {
-	margin-top: 40px;
-	width: 100%;
-}
-
-.review_item {
-	margin-bottom: 10px;
-}
-
-.review_text {
-	margin: 0px;
-}
-
-article h3 {
-	font-size: 14px;
-	padding: 0px;
-	margin: 0px;
-	margin-bottom: 5px;
+.amenities h2{
+    text-align:left;
+    margin-left:0px;
+    font-size:16px;
+    border-bottom:1px solid #DDDDDD;
+    margin-bottom:-10px ;
 
 }
 
-.guest_icon {
-	display: inline-block;
-	background-image: url("../images/icon_group.png");
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 50px;
-	height: 50px;
+.amenities ul{
+
+    padding: 0px;
 }
 
-.bed_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bed.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
-}
-
-.bath_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bath.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
-}
-
-.tv_icon {
-	display: inline-block;
-	background-image: url("../images/icon_tv.png");
-	background-size: cover;
-	width: 20px;
-	height: 20px;
-
-	margin-right: 10px;
-}
-
-.wifi_icon {
-	display: inline-block;
-    background-image: url("../images/icon_wifi.png");
-    background-size: cover;
-	width: 20px;
-    height: 20px;
-
-	margin-right: 10px;
-}
-
-.pet_icon {
-	display: inline-block;
-    background-image: url("../images/icon_pets.png");
-	background-size: cover;
+._tv-icon{
+    background-image: url(../images/icon_tv.png);
+    background-repeat: no-repeat;
+    background-size: contain;
     width: 20px;
-	height: 20px;
+    height:20px;
+  
+    margin-bottom: 15px;
+}
 
-	margin-right: 10px;
+._wifi-icon{
+    background-image: url(../images/icon_wifi.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 20px;
+    height:20px;
+    margin-top:10px;
+    margin-bottom: 16px;
+}
+
+._pets-icon{
+
+    background-image: url(../images/icon_pets.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 20px;
+    height:20px;
+    margin-top:10px;
+    margin-bottom: 16px;
+}
+
+._list_amenities p{
+    font-size: 12px;
+    margin-left:25px;
+    margin-top: 1px;
+}
+
+._list_amenities{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+._list_review  h3{
+    text-align: left;
+    font-size: 14px;
+}
+
+._list_review p{
+    margin-top:1px;
+    text-align: left;
 }
