--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,9 +1,10 @@
-footer {
-	position: fixed;
-	bottom: 0;
-	background-color: #00FF00;
-	height: 60px;
-	width: 100%;
-	text-align: center;
-	line-height: 30px;
+footer{
+  position:fixed;
+  bottom:0;
+  background-color:#00FF00;
+  height:60px;
+  width:100%
+}
+p{
+  text-align:center;
 }
