--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,10 +1,12 @@
-footer {
-	position: fixed;
-	bottom: 0;
-	background-color: white;
-	height: 60px;
-	width: 100%;
-	text-align: center;
-	line-height: 30px;
-	border-top: 1px solid #CCCCCC;
+footer{
+ 
+  bottom:0;
+  border-top:1px  solid #CCCCCC;
+  background-color: white;
+  width: 100%;
+  height: 60px;
+
+}
+._p{
+  margin-top:25px;
 }
